--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Blog API for mastering server calls",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --exit",
     "start": "node server.js"
   },
   "repository": {
@@ -18,6 +18,14 @@
   },
   "homepage": "https://github.com/AFish622/blog-api2#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "express": "^4.17.1",
+    "mocha": "^7.1.2",
+    "morgan": "^1.10.0",
+    "node": "^14.2.0",
+    "nodemon": "^2.0.3",
     "uuid": "^8.0.0"
   }
 }
